# football-data-platform

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  scrapy.cfg
alembic/: env.py
alembic/versions/: 2023_08_08_1651-2a57bf011dbc_create_schemas.py  2023_08_08_1652-8a0fd60cefcf_create_refresh_updated_at_function.py  2023_08_08_1654-ea294198d6e4_crate_transfermarkt_marketvalue_model.py  2023_08_08_1654-ea294198d6e4_create_transfermarkt_marketvalue_model.py  2023_08_08_2101-1dac0f14e3c9_create_fbref_matchesevents_model.py  2023_08_08_2101-1dac0f14e3c9_create_fbref_matchesreports_model.py  2023_08_09_1519-1d7720ca7433_create_sofascore_matchesreports_model.py  2023_08_11_1149-2e24f34ca57e_create_sofascore_matchesevents_model.py  2024_01_25_2339-4b612e8fbe29_create_fbrefscoutingreports_model.py  2024_01_29_0055-a1f6b95cbff1_create_fbrefplayers_model.py  2024_01_30_2011-9ae01f909ed7_create_schemas.py  2024_01_30_2013-cc8f04377ee9_register_fun_refresh_updated_at.py  2024_01_30_2217-9cb7b217e4af_create_model_fbrefplayers.py  2024_01_30_2217-9cb7b217e4af_create_model_fbrefteams.py  2024_01_30_2218-68f8434755eb_register_trg_players_refresh_updated_at.py  2024_01_30_2218-68f8434755eb_register_trg_teams_refresh_updated_at.py  2024_01_30_2219-b58732f1bef8_create_model_fbrefplayers.py  2024_01_30_2219-b58732f1bef8_create_model_fbrefscoutingreports.py  2024_01_30_2220-e55a606b0a8c_register_trg_scouting_reports_refresh_.py  2024_02_03_1608-03823f0417c0_create_model_fbrefscoutingreports.py  2024_02_03_1608-03823f0417c0_create_model_fbrefteams.py  2024_02_03_1611-5c065a80315e_register_trg_teams_refresh_updated_at.py  2024_02_04_1512-9b2b2e8afafb_create_model_sofascoreteams.py  2024_02_04_1517-e4b04377e715_register_trg_teams_refresh_updated_at.py  (+13 more)
app/: settings.py
superset/: Dockerfile  superset-init.sh  superset_config.py
(+47 files in other folders)
