[tool.poetry]
name = "football-data-platform"
version = "0.1.0"
description = ""
authors = ["Felipe Allegretti <felipe@allegretti.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.11.1"
pandas = "<2.2.0"
sqlalchemy = "<2.0.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
loguru = "^0.7.2"
toml = "0.10.2"
dateparser = "^1.2.0"
boto3 = "^1.34.44"
pydantic-settings = "^2.2.0"
tqdm = "^4.66.2"
alembic-utils = "^0.8.2"
country-converter = "^1.2"
countrynames = "^1.15.3"
recordlinkage = "^0.16"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ruff = "^0.1.13"
black = {extras = ["jupyter"], version = "^23.12.1"}

[tool.black]
line-length = 120
preview = true

[tool.ruff]
line-length = 120
select = [
    "COM",  # flake8-commas
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "RET",  # flake8-return
    "Q",  # flake8-quotes
    "W",  # pycodestyle warnings
]
